--- a/flask_test/flask_test.ipynb
+++ b/flask_test/flask_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -21,21 +21,7 @@
       " * Running on all addresses (0.0.0.0)\n",
       " * Running on http://127.0.0.1:8080\n",
       " * Running on http://192.168.100.25:8080\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [29/Aug/2023 18:45:46] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:45:52] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:45:53] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:45:53] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:45:53] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:45:55] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:46:01] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:46:37] \"GET / HTTP/1.1\" 200 -\n",
-      "192.168.100.23 - - [29/Aug/2023 18:46:37] \"GET / HTTP/1.1\" 200 -\n",
-      "192.168.100.23 - - [29/Aug/2023 18:46:37] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:46:37] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:46:37] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:46:38] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Aug/2023 18:46:41] \"GET / HTTP/1.1\" 200 -\n"
+      "Press CTRL+C to quit\n"
      ]
     }
    ],
@@ -52,7 +38,7 @@
     "\n",
     "\n",
     "if __name__ ==\"__main__\":\n",
-    "    app.run(debug=True,port=8080,host='0.0.0.0',use_reloader=False, threaded=False)"
+    "    app.run(debug=False,port=8080,host='0.0.0.0',use_reloader=False, threaded=False)"
    ]
   }
  ],
