--- a/whisper/test.ipynb
+++ b/whisper/test.ipynb
@@ -74,18 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "芸術・美術\n",
-      "宗教\n",
-      "歴史・世界史・文化史\n",
-      "社会科学\n",
-      "諸芸・娯楽\n"
+      "宗教、文学、芸術・美術\n"
      ]
     }
    ],
@@ -125,7 +121,7 @@
     "できるだけ多くの、関連しているジャンルを選んでください。\n",
     "例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。\n",
     "\n",
-    "出力は分類結果だけを表示してください。\n",
+    "出力は分類結果だけを表示してください。例えば「宗教、文学、芸術・美術、スポーツ・体育」のように記述してください。\n",
     "\n",
     "\"\"\"\n",
     "response = openai.ChatCompletion.create(\n",
@@ -135,6 +131,115 @@
     "    ],\n",
     ")\n",
     "print(response.choices[0][\"message\"][\"content\"].strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "質問文:\n",
+      "\n",
+      "あなたは日本の大阪府にいます。\n",
+      "あなたは大阪大学ミュージアム同好会というサークルに所属しているロボットで、あなたの仕事はクライアントに言われた要求に最も近い展示を案内することです。\n",
+      "クライアントが来て以下のようにあなたに尋ねました。\n",
+      "「海賊王になりたいです。海賊王に俺はなる！！！」\n",
+      "\n",
+      "今行われている展示は以下の4個です。またカッコの中にはその展示についての説明が書いてあります。\n",
+      "\n",
+      "・大航海時代展(ルネサンスから始まる大航海時代について、ヴァスコ・ダ・ガマ、そしてマルコポーロの二人を中心に迫ります。)\n",
+      "・中国の壺展覧会(白磁器ーそれは景徳鎮が産んだ世界最高の美。日本の有田焼やドイツのマイセンにも影響を与えたとされるその美を展示します。)\n",
+      "・花の美術展(全国のボタニカル・アートを集結した一大イベントです！)\n",
+      "・国際漫画展(アメコミからバンド・デシネ、そして日本の漫画まで数多の作品を展示！)\n",
+      "\n",
+      "このクライアントにはどの展示を勧めたらいいでしょうか？\n",
+      "\n",
+      "回答は「わかりました！なるほど、あなたは〜について興味があるのですね！（なにか感想を書く）そんなあなたにおすすめの展示は〜で...」のようにフレンドリーに回答してください。\n",
+      "またなぜそれを選んだのかを簡単に、クライアントにわかりやすく説明してください。回答は自然で丁寧な日本語で、子供にもわかりやすように書いてください。\n",
+      "一人称はミュージアム同好会」を利用してください。\n",
+      "回答だけを記述してください。\n",
+      "展示説明には書かれていないことを憶測して書く場合は、「おそらく〜」、「詳しはわかりませんが〜」「これは私の考えですが〜」のように自分の推測であることを記載してください。\n",
+      "\n",
+      "\n",
+      "回答文:\n",
+      "わかりました！\n",
+      "なるほど、あなたは海賊王になりたいのですね！\n",
+      "海賊王になるという目標はとても素敵です！\n",
+      "\n",
+      "そんなあなたにおすすめの展示は「大航海時代展」です。\n",
+      "\n",
+      "\n",
+      "大航海時代展では、ヴァスコ・ダ・ガマやマルコ・ポーロといった偉大な航海者たちの活躍について学ぶことができます。\n",
+      "彼らは大航海時代に世界中を航海し、新しい地域や財宝を発見しました。\n",
+      "海賊たちもその時代に活躍していたので、海賊王になるためのヒントが見つかるかもしれませんよ！\n",
+      "\n",
+      "\n",
+      "展示では、まるで当時の冒険に参加しているような感覚を味わえるような演出があります。\n",
+      "船に乗ったり、航海ルートをたどったりすることもできるんです。\n",
+      "そして、海賊たちの宝物のレプリカも展示されていることでしょう。\n",
+      "これは私の考えですが、その宝物に触れることで、海賊王になるイメージがより強くなるかもしれません。\n",
+      "\n",
+      "\n",
+      "是非、「大航海時代展」で海賊王になるための探求の旅をはじめてみてください！\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openai\n",
+    "import os\n",
+    "#import re\n",
+    "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\")\n",
+    "openai.api_key = OPENAI_API_KEY\n",
+    "\n",
+    "client_ask = \"海賊王になりたいです。海賊王に俺はなる！！！\"\n",
+    "\n",
+    "exhibitions_list = [\n",
+    "    \"大航海時代展(ルネサンスから始まる大航海時代について、ヴァスコ・ダ・ガマ、そしてマルコポーロの二人を中心に迫ります。)\",\n",
+    "    \"中国の壺展覧会(白磁器ーそれは景徳鎮が産んだ世界最高の美。日本の有田焼やドイツのマイセンにも影響を与えたとされるその美を展示します。)\",\n",
+    "    \"花の美術展(全国のボタニカル・アートを集結した一大イベントです！)\",\n",
+    "    \"国際漫画展(アメコミからバンド・デシネ、そして日本の漫画まで数多の作品を展示！)\"\n",
+    "]\n",
+    "exhibitions_list_str = \"\"\n",
+    "for exhibition in exhibitions_list:\n",
+    "    exhibitions_list_str  += \"\\n・\" + exhibition \n",
+    "exhibitions_list_str  += \"\\n\" #最後の改行\n",
+    "#print(exhibitions_list_str)\n",
+    "\n",
+    "question = f\"\"\"\n",
+    "あなたは日本の大阪府にいます。\n",
+    "あなたは大阪大学ミュージアム同好会というサークルに所属しているロボットで、あなたの仕事はクライアントに言われた要求に最も近い展示を案内することです。\n",
+    "クライアントが来て以下のようにあなたに尋ねました。\n",
+    "「{client_ask}」\n",
+    "\n",
+    "今行われている展示は以下の{len(exhibitions_list)}個です。またカッコの中にはその展示についての説明が書いてあります。\n",
+    "{exhibitions_list_str}\n",
+    "このクライアントにはどの展示を勧めたらいいでしょうか？\n",
+    "\n",
+    "回答は「わかりました！なるほど、あなたは〜について興味があるのですね！（なにか感想を書く）そんなあなたにおすすめの展示は〜で...」のようにフレンドリーに回答してください。\n",
+    "またなぜそれを選んだのかを簡単に、クライアントにわかりやすく説明してください。回答は自然で丁寧な日本語で、子供にもわかりやすように書いてください。\n",
+    "一人称はミュージアム同好会」を利用してください。\n",
+    "回答だけを記述してください。\n",
+    "展示説明には書かれていないことを憶測して書く場合は、「おそらく〜」、「詳しはわかりませんが〜」「これは私の考えですが〜」のように自分の推測であることを記載してください。\n",
+    "\n",
+    "\"\"\"\n",
+    "response = openai.ChatCompletion.create(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"user\", \"content\": question},\n",
+    "    ],\n",
+    ")\n",
+    "answer = response.choices[0][\"message\"][\"content\"].strip()\n",
+    "\n",
+    "answer = answer.replace(\"！\",\"！\\n\")\n",
+    "answer = answer.replace(\"。\",\"。\\n\")\n",
+    "\n",
+    "print(\"質問文:\\n\" + question)\n",
+    "print(\"回答文:\\n\" + answer )"
    ]
   }
  ],
@@ -154,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   },
   "orig_nbformat": 4,
   "vscode": {
