自動分類プロトタイプを作成

--- a/whisper/test.ipynb
+++ b/whisper/test.ipynb
@@ -74,14 +74,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "宗教、文学、芸術・美術\n"
+      "芸術、美術\n"
+     ]
+    }
+   ],
+   "source": [
+    "bunrui_list_2 = [\n",
+    "    \"総記\", \"図書館、図書館情報学\", \"図書、書誌学\", \"百科事典、用語索引\", \"一般論文集、一般講演集、雑著\",\n",
+    "    \"逐次刊行物、一般年鑑\", \"団体、博物館\", \"ジャーナリズム、新聞\", \"叢書、全集、選集\", \"貴重書、郷土資料、その他の特別コレクション\",\n",
+    "    \"哲学\", \"哲学各論\", \"東洋思想\", \"西洋哲学\", \"心理学\", \"倫理学、道徳\", \"宗教\", \"神道\", \"仏教\", \"キリスト教、ユダヤ教\",\n",
+    "    \"歴史、世界史、文化史\", \"日本史\", \"アジア史、東洋史\", \"ヨーロッパ史、西洋史\", \"アフリカ史\", \"北アメリカ史\", \"南アメリカ史\", \"オセアニア史、両極地方史\", \"伝記\", \"地理、地誌、紀行\",\n",
+    "    \"社会科学\", \"政治\", \"法律\", \"経済\", \"財政\", \"統計\", \"社会\", \"教育\", \"風俗習慣、民俗学、民族学\", \"国防、軍事\",\n",
+    "    \"自然科学\", \"数学\", \"物理学\", \"化学\", \"天文学、宇宙科学\", \"地球科学、地学\", \"生物科学、一般生物学\", \"植物学\", \"動物学\", \"医学、薬学\",\n",
+    "    \"技術、工学\", \"建設工学、土木工学\", \"建築学\", \"機械工学、原子力工学\", \"電気工学\", \"海洋工学、船舶工学、兵器、軍事工学\", \"金属工学、鉱山工学\", \"化学工業\", \"製造工業\", \"家政学、生活科学\",\n",
+    "    \"産業\", \"農業\", \"園芸、造園\", \"蚕糸業\", \"畜産業、獣医学\", \"林業、狩猟\", \"水産業\", \"商業\", \"運輸、交通、観光事業\", \"通信事業\",\n",
+    "    \"芸術、美術\", \"彫刻、オブジェ\", \"絵画、書、書道\", \"版画、印章、篆刻、印譜\", \"写真、印刷\", \"工芸\", \"音楽、舞踊、バレエ\", \"演劇、映画、大衆芸能\", \"スポーツ、体育\", \"諸芸、娯楽\",\n",
+    "    \"言語\", \"日本語\", \"中国語、その他の東洋の諸言語\", \"英語\", \"ドイツ語、その他のゲルマン諸語\", \"フランス語、プロバンス語\", \"スペイン語、ポルトガル語\", \"イタリア語、その他のロマンス諸語\", \"ロシア語、その他のスラブ諸語\", \"その他の諸言語\",\n",
+    "    \"文学\", \"日本文学\", \"中国文学、その他の東洋文学\", \"英米文学\", \"ドイツ文学、その他のゲルマン文学\", \"フランス文学、プロバンス文学\", \"スペイン文学、ポルトガル文学\", \"イタリア文学、その他のロマンス文学\", \"ロシア・ソビエト文学、その他のスラブ文学\", \"その他の諸言語文学\"\n",
+    "]\n",
+    "\n",
+    "print(bunrui_list_2[70])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "芸術、美術\n",
+      "70 芸術、美術は更に以下のように分けられます。\n",
+      "71 彫刻、オブジェ\n",
+      "72 絵画、書、書道\n",
+      "73 版画、印章、篆刻、印譜\n",
+      "74 写真、印刷\n",
+      "75 工芸\n",
+      "76 音楽、舞踊、バレエ\n",
+      "77 演劇、映画、大衆芸能\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
+      "72, 75\n",
+      "家政学、生活科学\n",
+      "歴史、世界史、文化史\n",
+      " 20 歴史、世界史、文化史は更に以下のように分けられます。\n",
+      "21 日本史\n",
+      "22 アジア史、東洋史\n",
+      "23 ヨーロッパ史、西洋史\n",
+      "24 アフリカ史\n",
+      "25 北アメリカ史\n",
+      "26 南アメリカ史\n",
+      "27 オセアニア史、両極地方史\n",
+      "28 伝記\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
+      "20, 28, 70\n",
+      "諸芸、娯楽\n",
+      "[70, 72, 75, 79, 20, 59, 28]\n",
+      "ソート終了！！！\n",
+      "芸術、美術\n",
+      "絵画、書、書道\n",
+      "工芸\n",
+      "諸芸、娯楽\n",
+      "歴史、世界史、文化史\n",
+      "家政学、生活科学\n",
+      "伝記\n"
      ]
     }
    ],
@@ -91,46 +156,115 @@
     "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\")\n",
     "openai.api_key = OPENAI_API_KEY\n",
     "\n",
-    "question = \"\"\"\n",
+    "\n",
+    "def ask_bunrui_2(bunrui):\n",
+    "    global bunrui_list_2\n",
+    "    bunrui_index = int(bunrui) #indexになってたの忘れてた！！！\n",
+    "    non_splitable_list =[29,49,59,78,79]\n",
+    "    if bunrui_index in non_splitable_list :\n",
+    "        #これらは第二次区分ではもう分割できない\n",
+    "        #print(bunrui_index)\n",
+    "        return -1\n",
+    "    else:\n",
+    "        ask_str = f\"{bunrui} {bunrui_list_2[bunrui_index]}は更に以下のように分けられます。\\n\"\n",
+    "        count = bunrui_index + 1\n",
+    "        while (count not in non_splitable_list )  and ( count not in  [0,10,20,30,40,50,60,70,80,90,100]):\n",
+    "            #カウントが区切り出ないときはどんどん追加していく感じ\n",
+    "            #print(count)\n",
+    "            ask_str += str(count) + \" \"+bunrui_list_2[count] + \"\\n\"\n",
+    "            count+=1\n",
+    "        \n",
+    "        ask_str += \"\"\"この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\"\"\"\n",
+    "        \n",
+    "        #print(ask_str)\n",
+    "        return ask_str\n",
+    "\n",
+    "\n",
+    "exhibition_describe = \"\"\"\n",
+    "1948年に八木一夫、叶哲夫、山田光、松井美介、鈴木治の5人で結成された走泥社は、その後、会員の入れ替わりを経ながら50年間にわたり、日本の陶芸界を牽引してきた。走泥社という団体の功績について一言で述べるとすれば、いわゆる「オブジェ焼」を世間に認知させたということになるだろう。\n",
+    "本展は走泥社の活動に焦点を当て、その意義や意味を再検証するものだが、50年という走泥社の活動期間全体を見渡した時、日本陶芸界におけるその重要性は特に前半期に認められる。というのも、1960年代半ば以降、例えば1964年の現代国際陶芸展を皮切りに海外の動向が日本でも紹介されるようになり、走泥社が時代の中で有していた「前衛性」は次第に相対化されていくからだ。そこで本展では、走泥社結成25周年となる1973年までを主な対象とし、走泥社と同時期に前衛陶芸運動を展開した四耕会など走泥社以外の作家等も一部交えつつ、前衛陶芸が生まれた時代を振り返る。\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "exhibition_name = \"開館60周年記念　走泥社再考 前衛陶芸が生まれた時代\"\n",
+    "\n",
+    "\n",
+    "question = f\"\"\"\n",
     "「\n",
-    "ヒンドゥー教のあまたの神がみは、石や金属、土器、陶器などの立像、仮面、絵画や印刷物、タイル、刺繍、さらには絵本、コミック、切手やステッカーなど、さまざまなモノを通じて現れている。これらの神像は人々が五感を通じて神と交流するための重要な媒体となってきた。\n",
-    "神像との交流の核心には神への「愛」がある。この「愛」には神に愛されるという受動的側面よりも、人が神に愛をもって接近するという能動的、主体的側面が強く表れている。人々はさまざまな神話を踏まえながら、親がいたずらな子を愛おしんだり、愛人が相手を熱烈に愛したり、あるいは忠実なしもべが主人に無償の奉仕をするように、神像に具体的に愛を捧げてきた。また、日常的な礼拝においても実際に神像を沐浴させたり、着飾らせたりするなど具体的な働きかけを通して神像を歓待し、願いを聞き届けて貰おうとしてきた。\n",
-    "本展ではこの「神への愛」に基づいた、神と人との交流のさまざまなかたちの展示を中心に据える。具体的には現代インドで特に人気のある神々の神話を表現した図像の展示や神像への働きかけ方がわかる資料（神像の個別的なデコレーション、身体的感覚が発揮される儀礼用具などの展示や、儀礼の実際を取材した映像や写真画像など）を展示。それらを通じて、多神教的なヒンドゥー教世界や、そこに登場する弱みや欲望も合わせもった神がみの存在が紹介される。こういった神像はインドやネパールだけではなく、日本やヨーロッパでも制作され、ヒンドゥー教の世界で用いられていた。本展では南アジアの外の世界で作られた神像も展示し、信仰に関わるモノのグローバルな流通の一端も紹介する。\n",
+    "{exhibition_describe}\n",
     "」\n",
     "\n",
-    "上記の説明は「交感する神と人―ヒンドゥー神像の世界」という美術展についての説明文です。\n",
+    "上記の説明は「{exhibition_name}」という美術展についての説明文です。\n",
     "この説明をもとに、この展示を日本十進分類で分類してください。\n",
     "日本十進分類では、展示は\n",
-    "哲学\n",
-    "宗教\n",
-    "歴史・世界史・文化史\n",
-    "地理・地誌・紀行\n",
-    "社会科学\n",
-    "自然科学\n",
-    "医学・薬学\n",
-    "技術・工学\n",
-    "家政学・生活科学\n",
-    "産業\n",
-    "芸術・美術\n",
-    "スポーツ・体育\n",
-    "諸芸・娯楽\n",
-    "言語\n",
-    "文学\n",
+    "10 哲学\n",
+    "16 宗教\n",
+    "20 歴史、世界史、文化史\n",
+    "29 地理、地誌、紀行\n",
+    "30 社会科学\n",
+    "40 自然科学\n",
+    "49 医学・薬学\n",
+    "50 技術・工学\n",
+    "59 家政学、生活科学\n",
+    "60 産業\n",
+    "70 芸術、美術\n",
+    "78 スポーツ、体育\n",
+    "79 諸芸、娯楽\n",
+    "80 言語\n",
+    "90 文学\n",
     "\n",
     "に分類されます。\n",
-    "できるだけ多くの、関連しているジャンルを選んでください。\n",
-    "例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。\n",
+    "できるだけ多くの、関連しているジャンルを選んでください。重複していても構いません。どれだけ多くても構いません。\n",
+    "例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。じっくりどれに当てはまるのか考えてください。\n",
     "\n",
-    "出力は分類結果だけを表示してください。例えば「宗教、文学、芸術・美術、スポーツ・体育」のように記述してください。\n",
+    "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。\n",
+    "分類は,を使って区別してください。\n",
     "\n",
     "\"\"\"\n",
+    "\n",
+    "bunrui_num_list = []\n",
+    "messages = [{\"role\": \"user\", \"content\": question},]\n",
     "response = openai.ChatCompletion.create(\n",
     "    model=\"gpt-3.5-turbo\",\n",
-    "    messages=[\n",
-    "        {\"role\": \"user\", \"content\": question},\n",
-    "    ],\n",
+    "    messages=messages ,\n",
     ")\n",
-    "print(response.choices[0][\"message\"][\"content\"].strip())"
+    "\n",
+    "messages.append(response.choices[0][\"message\"])\n",
+    "response  = response.choices[0][\"message\"][\"content\"].strip()\n",
+    "\n",
+    "\n",
+    "\n",
+    "bunrui_1 = response.split(\",\")\n",
+    "for bunrui in bunrui_1:\n",
+    "    bunrui_num_list.append(int(bunrui)) #分類をリストに追加\n",
+    "\n",
+    "\n",
+    "for bunrui in bunrui_1:\n",
+    "    print(bunrui_list_2[int(bunrui)])\n",
+    "    ask_str = ask_bunrui_2(bunrui)\n",
+    "    if ask_str == -1:continue\n",
+    "    print(ask_str)\n",
+    "    messages.append({\"role\": \"user\", \"content\": ask_str },)\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=messages ,\n",
+    "    )\n",
+    "    #messages.append(response.choices[0][\"message\"]) #ここおそらくいらない。正直分類を複数回行うときにはこれまでの履歴は必要ないような気がする。なのでmessageから上記のappendをpopする。\n",
+    "    messages.pop(-1) #最後のやつはいらないのでpopして少しでも処理を軽くする！\n",
+    "    response  = response.choices[0][\"message\"][\"content\"].strip()\n",
+    "    print(response)\n",
+    "\n",
+    "    bunrui_2 = response.split(\",\")\n",
+    "    for bunrui in bunrui_2:\n",
+    "        bunrui_num_list.append(int(bunrui)) #分類をリストに追加\n",
+    "\n",
+    "bunrui_num_list = list(set(bunrui_num_list))#setで重複が消えるらしいが{}になるのでlist()を使ってリストに戻している＆sort()で昇順にソート\n",
+    "print(bunrui_num_list)\n",
+    "print(\"ソート終了！！！\")\n",
+    "\n",
+    "for bunrui_num in bunrui_num_list:\n",
+    "    print(bunrui_list_2[bunrui_num])\n",
+    "    #print(\"\\n\")\n"
    ]
   },
   {
