--- a/whisper/test.ipynb
+++ b/whisper/test.ipynb
@@ -106,25 +106,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "芸術、美術\n",
-      "70 芸術、美術は更に以下のように分けられます。\n",
-      "71 彫刻、オブジェ\n",
-      "72 絵画、書、書道\n",
-      "73 版画、印章、篆刻、印譜\n",
-      "74 写真、印刷\n",
-      "75 工芸\n",
-      "76 音楽、舞踊、バレエ\n",
-      "77 演劇、映画、大衆芸能\n",
+      "哲学\n",
+      "10 哲学は更に以下のように分けられます。\n",
+      "11 哲学各論\n",
+      "12 東洋思想\n",
+      "13 西洋哲学\n",
+      "14 心理学\n",
+      "15 倫理学、道徳\n",
+      "16 宗教\n",
+      "17 神道\n",
+      "18 仏教\n",
+      "19 キリスト教、ユダヤ教\n",
       "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
-      "72, 75\n",
-      "家政学、生活科学\n",
+      "16, 18\n",
       "歴史、世界史、文化史\n",
       " 20 歴史、世界史、文化史は更に以下のように分けられます。\n",
       "21 日本史\n",
@@ -136,17 +137,43 @@
       "27 オセアニア史、両極地方史\n",
       "28 伝記\n",
       "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
-      "20, 28, 70\n",
-      "諸芸、娯楽\n",
-      "[70, 72, 75, 79, 20, 59, 28]\n",
-      "ソート終了！！！\n",
+      "20, 70\n",
+      "社会科学\n",
+      " 30 社会科学は更に以下のように分けられます。\n",
+      "31 政治\n",
+      "32 法律\n",
+      "33 経済\n",
+      "34 財政\n",
+      "35 統計\n",
+      "36 社会\n",
+      "37 教育\n",
+      "38 風俗習慣、民俗学、民族学\n",
+      "39 国防、軍事\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
+      "30, 70\n",
       "芸術、美術\n",
-      "絵画、書、書道\n",
-      "工芸\n",
+      " 70 芸術、美術は更に以下のように分けられます。\n",
+      "71 彫刻、オブジェ\n",
+      "72 絵画、書、書道\n",
+      "73 版画、印章、篆刻、印譜\n",
+      "74 写真、印刷\n",
+      "75 工芸\n",
+      "76 音楽、舞踊、バレエ\n",
+      "77 演劇、映画、大衆芸能\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
+      "70, 75\n",
       "諸芸、娯楽\n",
-      "歴史、世界史、文化史\n",
-      "家政学、生活科学\n",
-      "伝記\n"
+      "[10, 16, 18, 20, 30, 70, 75, 79]\n",
+      "ソート終了！！！\n",
+      "以下に分類結果を表示します\n",
+      "10 哲学\n",
+      "16 宗教\n",
+      "18 仏教\n",
+      "20 歴史、世界史、文化史\n",
+      "30 社会科学\n",
+      "70 芸術、美術\n",
+      "75 工芸\n",
+      "79 諸芸、娯楽\n"
      ]
     }
    ],
@@ -188,14 +215,16 @@
     "\n",
     "exhibition_name = \"開館60周年記念　走泥社再考 前衛陶芸が生まれた時代\"\n",
     "\n",
-    "\n",
+    "exhibition_keywords = \"京都　工芸　陶芸　前衛芸術　\"\n",
     "question = f\"\"\"\n",
     "「\n",
     "{exhibition_describe}\n",
     "」\n",
     "\n",
     "上記の説明は「{exhibition_name}」という美術展についての説明文です。\n",
-    "この説明をもとに、この展示を日本十進分類で分類してください。\n",
+    "さらにこれを見た人が、この展示に関連したキーワードを以下に記載しました。（キーワードがない場合もあります。）\n",
+    "「{exhibition_keywords}」\n",
+    "この説明とキーワード・展示名をもとに、この展示を日本十進分類で分類してください。\n",
     "日本十進分類では、展示は\n",
     "10 哲学\n",
     "16 宗教\n",
@@ -259,11 +288,14 @@
     "        bunrui_num_list.append(int(bunrui)) #分類をリストに追加\n",
     "\n",
     "bunrui_num_list = list(set(bunrui_num_list))#setで重複が消えるらしいが{}になるのでlist()を使ってリストに戻している＆sort()で昇順にソート\n",
+    "bunrui_num_list = sorted(bunrui_num_list)\n",
     "print(bunrui_num_list)\n",
     "print(\"ソート終了！！！\")\n",
     "\n",
+    "\n",
+    "print(\"以下に分類結果を表示します\")\n",
     "for bunrui_num in bunrui_num_list:\n",
-    "    print(bunrui_list_2[bunrui_num])\n",
+    "    print(str(bunrui_num) + \" \"+bunrui_list_2[bunrui_num])\n",
     "    #print(\"\\n\")\n"
    ]
   },
