--- a/whisper/test.ipynb
+++ b/whisper/test.ipynb
@@ -106,28 +106,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "哲学\n",
-      "10 哲学は更に以下のように分けられます。\n",
-      "11 哲学各論\n",
-      "12 東洋思想\n",
-      "13 西洋哲学\n",
-      "14 心理学\n",
-      "15 倫理学、道徳\n",
-      "16 宗教\n",
-      "17 神道\n",
-      "18 仏教\n",
-      "19 キリスト教、ユダヤ教\n",
-      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
-      "16, 18\n",
       "歴史、世界史、文化史\n",
-      " 20 歴史、世界史、文化史は更に以下のように分けられます。\n",
+      "20 歴史、世界史、文化史は更に以下のように分けられます。\n",
       "21 日本史\n",
       "22 アジア史、東洋史\n",
       "23 ヨーロッパ史、西洋史\n",
@@ -136,8 +123,9 @@
       "26 南アメリカ史\n",
       "27 オセアニア史、両極地方史\n",
       "28 伝記\n",
-      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
-      "20, 70\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。じっくりどれに当てはまるのか考えてください。\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
+      "20, 23, 70\n",
       "社会科学\n",
       " 30 社会科学は更に以下のように分けられます。\n",
       "31 政治\n",
@@ -149,8 +137,9 @@
       "37 教育\n",
       "38 風俗習慣、民俗学、民族学\n",
       "39 国防、軍事\n",
-      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
-      "30, 70\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。じっくりどれに当てはまるのか考えてください。\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
+      "20, 30, 36, 70\n",
       "芸術、美術\n",
       " 70 芸術、美術は更に以下のように分けられます。\n",
       "71 彫刻、オブジェ\n",
@@ -160,20 +149,18 @@
       "75 工芸\n",
       "76 音楽、舞踊、バレエ\n",
       "77 演劇、映画、大衆芸能\n",
-      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
-      "70, 75\n",
-      "諸芸、娯楽\n",
-      "[10, 16, 18, 20, 30, 70, 75, 79]\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。じっくりどれに当てはまるのか考えてください。\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
+      "70, 72\n",
+      "[20, 23, 30, 36, 70, 72]\n",
       "ソート終了！！！\n",
       "以下に分類結果を表示します\n",
-      "10 哲学\n",
-      "16 宗教\n",
-      "18 仏教\n",
       "20 歴史、世界史、文化史\n",
+      "23 ヨーロッパ史、西洋史\n",
       "30 社会科学\n",
+      "36 社会\n",
       "70 芸術、美術\n",
-      "75 工芸\n",
-      "79 諸芸、娯楽\n"
+      "72 絵画、書、書道\n"
      ]
     }
    ],
@@ -201,21 +188,22 @@
     "            ask_str += str(count) + \" \"+bunrui_list_2[count] + \"\\n\"\n",
     "            count+=1\n",
     "        \n",
-    "        ask_str += \"\"\"この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\"\"\"\n",
+    "        ask_str += \"\"\"この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。じっくりどれに当てはまるのか考えてください。\n",
+    "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\"\"\"\n",
     "        \n",
     "        #print(ask_str)\n",
     "        return ask_str\n",
     "\n",
     "\n",
     "exhibition_describe = \"\"\"\n",
-    "1948年に八木一夫、叶哲夫、山田光、松井美介、鈴木治の5人で結成された走泥社は、その後、会員の入れ替わりを経ながら50年間にわたり、日本の陶芸界を牽引してきた。走泥社という団体の功績について一言で述べるとすれば、いわゆる「オブジェ焼」を世間に認知させたということになるだろう。\n",
-    "本展は走泥社の活動に焦点を当て、その意義や意味を再検証するものだが、50年という走泥社の活動期間全体を見渡した時、日本陶芸界におけるその重要性は特に前半期に認められる。というのも、1960年代半ば以降、例えば1964年の現代国際陶芸展を皮切りに海外の動向が日本でも紹介されるようになり、走泥社が時代の中で有していた「前衛性」は次第に相対化されていくからだ。そこで本展では、走泥社結成25周年となる1973年までを主な対象とし、走泥社と同時期に前衛陶芸運動を展開した四耕会など走泥社以外の作家等も一部交えつつ、前衛陶芸が生まれた時代を振り返る。\n",
+    "戦前、絵画や彫刻を学ぶ数多の日本人留学生がフランス・パリに押し寄せていた中、数は少ないですが、留学先にベルギーを選んだ者たちがいた。画家の太田喜二郎(1883～1951)と児島虎次郎(1881～1929)、彫刻家の武石弘三郎(1877～1963)である。\n",
+    "本展では、この3人を中心に関連作家を加え、当時の印刷物による紹介や展示などにも着目し、約100点の作品と資料類から戦前の日本におけるベルギー美術受容の様相を紹介する。\n",
     "\"\"\"\n",
     "\n",
     "\n",
-    "exhibition_name = \"開館60周年記念　走泥社再考 前衛陶芸が生まれた時代\"\n",
+    "exhibition_name = \"ベルギーと日本―光をえがき、命をかたどる（岡山展）\"\n",
     "\n",
-    "exhibition_keywords = \"京都　工芸　陶芸　前衛芸術　\"\n",
+    "exhibition_keywords = \"\"\n",
     "question = f\"\"\"\n",
     "「\n",
     "{exhibition_describe}\n",
@@ -262,7 +250,7 @@
     "response  = response.choices[0][\"message\"][\"content\"].strip()\n",
     "\n",
     "\n",
-    "\n",
+    "#bunrui_1は１段階目の分類結果\n",
     "bunrui_1 = response.split(\",\")\n",
     "for bunrui in bunrui_1:\n",
     "    bunrui_num_list.append(int(bunrui)) #分類をリストに追加\n",
@@ -292,6 +280,7 @@
     "print(bunrui_num_list)\n",
     "print(\"ソート終了！！！\")\n",
     "\n",
+    "#以下に展示対象分類について追加する\n",
     "\n",
     "print(\"以下に分類結果を表示します\")\n",
     "for bunrui_num in bunrui_num_list:\n",
