分類用の関数を作成

--- a/whisper/test.ipynb
+++ b/whisper/test.ipynb
@@ -196,12 +196,11 @@
     "\n",
     "\n",
     "exhibition_describe = \"\"\"\n",
-    "戦前、絵画や彫刻を学ぶ数多の日本人留学生がフランス・パリに押し寄せていた中、数は少ないですが、留学先にベルギーを選んだ者たちがいた。画家の太田喜二郎(1883～1951)と児島虎次郎(1881～1929)、彫刻家の武石弘三郎(1877～1963)である。\n",
-    "本展では、この3人を中心に関連作家を加え、当時の印刷物による紹介や展示などにも着目し、約100点の作品と資料類から戦前の日本におけるベルギー美術受容の様相を紹介する。\n",
+    "四日市ゆかりの木版画家・立原位貫（1951-2015）は、独学で江戸期浮世絵の魅力を現代に蘇らせ、さらにはオリジナルでも粋で個性的な作品を創り出しました。大英博物館に収蔵されるなど、世界に誇れる画家の足跡を辿り、その面白さ、美しさを紹介します。\n",
     "\"\"\"\n",
     "\n",
     "\n",
-    "exhibition_name = \"ベルギーと日本―光をえがき、命をかたどる（岡山展）\"\n",
+    "exhibition_name = \"開館30周年記念　特別展 立原位貫　〜想像力から創造力へ〜\"\n",
     "\n",
     "exhibition_keywords = \"\"\n",
     "question = f\"\"\"\n",
